# slopscore

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  slopscore-example.yml  slopscore.yml
ci/: slopscore.gitlab-ci.yml
eval/: README.md
eval/holdout/: django__django__12259.json  django__django__12261.json  django__django__12263.json  expressjs__express__4114.json  expressjs__express__4143.json  expressjs__express__4144.json  home-assistant__core__30338.json  home-assistant__core__30341.json  home-assistant__core__30342.json  numpy__numpy__15205.json  numpy__numpy__15211.json  numpy__numpy__15212.json  pallets__flask__3437.json  pallets__flask__3453.json  pallets__flask__3456.json  pandas-dev__pandas__30585.json  pandas-dev__pandas__30586.json  pandas-dev__pandas__30588.json  psf__requests__5243.json  psf__requests__5250.json  psf__requests__5276.json  scikit-learn__scikit-learn__15997.json  scikit-learn__scikit-learn__15998.json  scikit-learn__scikit-learn__15999.json
hooks/: commit-msg  pre-push
plugin/.claude-plugin/: plugin.json
plugin/commands/: clean.md
plugin/hooks/: hooks.json
src/slopscore/: __init__.py  cli.py  config.py  githooks.py  imports.py  ingest.py  signals.py  triage.py
tests/: test_calibration.py  test_cli.py  test_code_signals.py  test_config.py  test_corpus.py  test_githooks.py  test_holdout.py  test_hooks.py  test_imports.py  test_ingest.py  test_plugin.py  test_signals.py  test_triage.py
tools/: action-scan.sh  install-git-hook.sh  render-sample-svg.py
