[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slopscore"
version = "0.1.0"
description = "Heuristic slop linter for your own commits and PRs - scores AI residue and low-craft slop 0-100, never accuses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matt Whelan" }]
keywords = ["lint", "ai", "slop", "commit", "git-hooks", "pull-request", "code-quality", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/koopatroopa/slopscore"
Repository = "https://github.com/koopatroopa/slopscore"
Issues = "https://github.com/koopatroopa/slopscore/issues"

[project.scripts]
slopscore = "slopscore.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slopscore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest"]
