[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slopscore"
version = "0.1.0.post1"
description = "Heuristic linter that scores AI residue in commits and PRs 0-100 with evidence - flags craft, not authorship"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matt Whelan" }]
keywords = ["lint", "ai", "slop", "commit", "git-hooks", "pull-request", "code-quality", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/koopatroopa/slopscore"
Repository = "https://github.com/koopatroopa/slopscore"
Issues = "https://github.com/koopatroopa/slopscore/issues"

[project.scripts]
slopscore = "slopscore.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slopscore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest"]
